force-app/main/default/objects/Webhook_Config__mdt/fields/DeveloperKey__c.field-meta.xml
<CustomField>
    <fullName>DeveloperKey__c</fullName>
    <inlineHelpText>e.g., companycam, vendorX-comments.</inlineHelpText>
    <label>DeveloperKey</label>
    <length>120</length>
    <type>Text</type>
</CustomField>