force-app/main/default/objects/Webhook_Config__mdt/fields/Idempotency_Window_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Idempotency_Window_Seconds__c</fullName>
    <defaultValue>300</defaultValue>
    <label>Idempotency Window Seconds__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>