force-app/main/default/objects/Webhook_Config__mdt/fields/Match_By__c.field-meta.xml
<CustomField>
    <fullName>Match_By__c</fullName>
    <label>Match By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Header</fullName>
                <default>true</default>
                <label>Header</label>
            </value>
            <value>
                <fullName>WebhookId</fullName>
            </value>
            <value>
                <fullName>Path</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>