force-app/main/default/objects/Webhook_Config__mdt/fields/Match_Value__c.field-meta.xml
<CustomField>
    <fullName>Match_Value__c</fullName>
    <inlineHelpText>e.g., X-Partner: companycam, or webhook_id: 111247, or /application-name.</inlineHelpText>
    <label>Match Value</label>
    <length>120</length>
    <type>Text</type>
</CustomField>