force-app/main/default/objects/Webhook_Config__mdt/fields/Require_Shared_Key__c.field-meta.xml
<CustomField>
    <fullName>Require_Shared_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Shared Key</label>
    <type>Checkbox</type>
</CustomField>