force-app/main/default/objects/Webhook_Config__mdt/fields/Require_Signature__c.field-meta.xml
<CustomField>
    <fullName>Require_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Require Signature</label>
    <type>Checkbox</type>
</CustomField>