force-app/main/default/objects/Webhook_Config__mdt/fields/Shared_Key_Header__c.field-meta.xml
<CustomField>
    <fullName>Shared_Key_Header__c</fullName>
    <defaultValue>&quot;X-API-Key&quot;</defaultValue>
    <label>Shared Key Header</label>
    <length>120</length>
    <type>Text</type>
</CustomField>