force-app/main/default/objects/Webhook_Config__mdt/fields/Signature_Header__c.field-meta.xml
<CustomField>
    <fullName>Signature_Header__c</fullName>
    <defaultValue>&quot;X-Signature&quot;</defaultValue>
    <label>Signature Header</label>
    <length>120</length>
    <type>Text</type>
</CustomField>