force-app/main/default/objects/Webhook_Config__mdt/fields/Signature_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Signature_Prefix__c</fullName>
    <defaultValue>&quot;sha256=&quot;</defaultValue>
    <label>Signature Prefix</label>
    <length>120</length>
    <type>Text</type>
</CustomField>