force-app/main/default/objects/Webhook_Config__mdt/fields/Timestamp_Header__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Header__c</fullName>
    <defaultValue>&quot;X-Timestamp&quot;</defaultValue>
    <label>Timestamp Header</label>
    <length>120</length>
    <type>Text</type>
</CustomField>