force-app/main/default/objects/Webhook_Config__mdt/fields/Timestamp_Tolerance_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Timestamp_Tolerance_Seconds__c</fullName>
    <defaultValue>300</defaultValue>
    <label>Timestamp Tolerance Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>