force-app/main/default/objects/Webhook_Config__mdt/fields/Webhook_Path__c.field-meta.xml
<CustomField>
    <fullName>Webhook_Path__c</fullName>
    <description>The REST resource path associated with this webhook.</description>
    <label>Webhook Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>